--- a/package.json
+++ b/package.json
@@ -2,21 +2,66 @@
   "name": "frontend-challenge",
   "version": "1.0.0",
   "description": "Sheypoor frontend challenge",
-  "main": "sdk/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "eject": "react-scripts eject"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/sheypoor/frontend-challenge.git"
   },
-  "author": "Pendar Safari <pendar.safari@gmail.com>",
+  "author": "Sina Hoseinzadeh <sina.hoseinzadeh@gmail.com>",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/sheypoor/frontend-challenge/issues"
   },
-  "homepage": "https://github.com/sheypoor/frontend-challenge#readme",
+  "homepage": ".",
   "dependencies": {
-    "sdk": "file:sdk"
+    "@material-ui/core": "^4.12.3",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "@types/jest": "^26.0.15",
+    "@types/node": "^12.0.0",
+    "@types/query-string": "^6.3.0",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "jss-rtl": "^0.3.0",
+    "mobx": "^6.3.2",
+    "mobx-react-lite": "^3.2.0",
+    "mobx-state-tree": "^5.0.2",
+    "query-string": "^6.13.8",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-hook-form": "^7.12.2",
+    "react-router-dom": "^5.2.0",
+    "react-script": "^2.0.5",
+    "react-scripts": "4.0.3",
+    "sdk": "file:sdk",
+    "typescript": "^4.1.2",
+    "web-vitals": "^1.0.1"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "@types/react-router-dom": "^5.1.8"
   }
 }
