--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "echo \"Error: no test specified\" && exit 1",
     "eject": "react-scripts eject"
   },
@@ -17,7 +19,7 @@
   "bugs": {
     "url": "https://github.com/sheypoor/frontend-challenge/issues"
   },
-  "homepage": ".",
+  "homepage": "http://Sina-HZ.github.io/frontend-challenge",
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@testing-library/jest-dom": "^5.11.4",
@@ -37,7 +39,6 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.12.2",
     "react-router-dom": "^5.2.0",
-    "react-script": "^2.0.5",
     "react-scripts": "4.0.3",
     "sdk": "file:sdk",
     "typescript": "^4.1.2",
@@ -62,6 +63,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.1.8"
+    "@types/react-router-dom": "^5.1.8",
+    "gh-pages": "^3.2.3"
   }
 }
