--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "bugs": {
     "url": "https://github.com/sheypoor/frontend-challenge/issues"
   },
+  "homepage": "https://sina-hz.github.com/frontend-challenge",
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@testing-library/jest-dom": "^5.11.4",
