--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Sheypoor frontend challenge",
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "predeploy": "npm run build",
+    "build": "PUBLIC_URL=/frontend-challenge && react-scripts build",
+    "predeploy": "PUBLIC_URL=https://sina-hz.github.com/frontend-challenge && npm run build",
     "deploy": "gh-pages -d build",
     "test": "echo \"Error: no test specified\" && exit 1",
     "eject": "react-scripts eject"
@@ -19,7 +19,6 @@
   "bugs": {
     "url": "https://github.com/sheypoor/frontend-challenge/issues"
   },
-  "homepage": "https://sina-hz.github.com/frontend-challenge",
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@testing-library/jest-dom": "^5.11.4",
