--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "PUBLIC_URL=/frontend-challenge && react-scripts build",
-    "predeploy": "PUBLIC_URL=https://sina-hz.github.com/frontend-challenge && npm run build",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "test": "echo \"Error: no test specified\" && exit 1",
     "eject": "react-scripts eject"
