--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Sheypoor frontend challenge",
   "scripts": {
     "start": "react-scripts start",
-    "build": "PUBLIC_URL=/frontend-challenge && react-scripts build",
+    "build": "react-scripts build",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "test": "echo \"Error: no test specified\" && exit 1",
